--- a/business/readme
+++ b/business/readme
@@ -1,1 +1,1 @@
-Classes for storing information about admin, users, replies and posts
+Classes for storing information about admin, users, replies and posts. Acts as model
